# JUCE-AudioPlugin-CMake-Starter

./: .gitignore  CMakeLists.txt  README.md  juce-download.sh
